--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./css/style.css"
 </head>
 <body>
+<header>
+    <div class="menu">
+        <div class="item"> Strona główna</div>
+        <div class="item"> Podstrona</div>
+        <div class="item"> Podstrona</div>
+        <div class="item"> Kontakt</div>
+    </div>
+    <div class="logo">
+        <img src="./images/logo3_144319_20170104121733.png" alt="logo"/></div>
+</header>
+<div class="layout">
 "Przykładowy tekst"
 
+</div>
 </body>
 </html>
