--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="item"> Kontakt</div>
     </div>
     <div class="logo">
-        <img src="./images/logo3_144319_20170104121733.png" alt="logo"/></div>
+        <img src="./images/logo3_144319_20170104121733.png" width="200" height="100" alt="logo"/></div>
+    <h1> InfoShare Academy</h1>
 </header>
 <div class="layout">
 "Przykładowy tekst"
