--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./css/style.css"
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div class="row">
+    
 <header>
     <div class="menu">
         <div class="item"> Strona główna</div>
@@ -17,9 +19,23 @@
         <img src="./images/logo3_144319_20170104121733.png" width="200" height="100" alt="logo"/></div>
     <h1> InfoShare Academy</h1>
 </header>
-<div class="layout">
-"Przykładowy tekst"
+<div class="col-10">
+    <a>Ostatnie aktualności</a>
+    <h2> Każdy artykuł powinien mieć swój tytuł </h2>
+    <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<div class="button">
+    Więcej
+</div>
 
 </div>
+
+<div class="col-2">
+    <h3> Kategorie </h3>
+    <h4> Kategoria 1 </h4>
+    <h4> Kategoria 2 </h4>
+    <h4> Kategoria 3 </h4>
+</div>
+</div>
+
 </body>
 </html>
