added media queries

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="row">
     <div class="col-10">
         <header>
-            <div class="menu">
-                <div class="item"> Strona główna</div>
-                <div class="item"> Podstrona</div>
-                <div class="item"> Podstrona</div>
-                <div class="item"> Kontakt</div>
+            <div class="topnav">
+                <a>Strona główna</a>
+                <a> Podstrona</a>
+                <a> Podstrona</a>
+                <a> Kontakt</a>
             </div>
             <div class="logo">
-                <img src="./images/logo3_144319_20170104121733.png" width="200" height="100"
-                     alt="logo"/></div>
+                <img src="./images/logo3_144319_20170104121733.png" width="200" height="100" alt="logo"/></div>
             <h1> InfoShare Academy</h1>
         </header>
 
@@ -49,5 +49,7 @@
     </div>
 
 </div>
+
+
 </body>
 </html>
